# libvpx-bindings

./: README.md
.github/workflows/: pypi-packages.yml
js/: CMakeLists.txt  libvpxjs.cpp  vpxcommon_impl.hpp  vpxdecoder.cpp
js/libvpx/: CMakeLists.txt
python/: CMakeLists.txt  pylibvpx.cpp  pyproject.toml  setup.py
python/pylibvpx/: __init__.py
